--- a/AspAndWebpack/package.json
+++ b/AspAndWebpack/package.json
@@ -12,5 +12,10 @@
   "devDependencies": {
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6"
+  },
+  "dependencies": {
+    "bootstrap": "^3.4.1",
+    "jquery": "^3.4.1",
+    "jquery-validation": "^1.19.1"
   }
 }
