--- a/AspAndWebpack/package.json
+++ b/AspAndWebpack/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "css-loader": "^3.1.0",
     "file-loader": "^4.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "style-loader": "^0.23.1",
